[package]
name = "non-fungible-token"
version = "1.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"
hex = "0.4.3"
elliptic-curve = "0.12.2"
ed25519-dalek = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
